# Stratega

./: CMakeLists.txt
Arena/: main.cpp
GUI/: main.cpp
MapBuilder/: CMakeLists.txt  main.cpp
Stratega/: CMakeLists.txt
Stratega/include/Stratega/ForwardModel/: EntityForwardModel.h  RTSForwardModel.h  TBSForwardModel.h  TargetType.h
Stratega/include/Stratega/GUI/: AssetCache.h  EntityRenderer.h  TextureAtlas.h
Stratega/include/Stratega/Logging/: FileLogger.h
Stratega/include/Stratega/MapGUI/: EditableTileMap.h  ExistingMapRenderer.h  ExistingMapRunner.h  MapEntityRenderer.h  MapLockRenderer.h  MapRenderer.h  MapRunner.h  MapState.h  MapStats.h  MapViewRenderer.h  MiniTileMap.h  NewMapRenderer.h  NewMapRunner.h
Stratega/include/Stratega/Representation/: Tile.h  Vector2.h
Stratega/src/Configuration/: GameConfigParser.cpp
Stratega/src/ForwardModel/: EntityForwardModel.cpp
Stratega/src/GUI/: AssetCache.cpp  TBSGameRenderer.cpp
Stratega/src/MapGUI/: EditableTileMap.cpp  ExistingMapRenderer.cpp  ExistingMapRunner.cpp  MapEntityRenderer.cpp  MapLockRenderer.cpp  MapRenderer.cpp  MapRunner.cpp  MapState.cpp  MapViewRenderer.cpp  MiniTileMap.cpp  NewMapRenderer.cpp  NewMapRunner.cpp
docs/gettingStarted/installation/: index.rst
docs/tutorials/implementTBSAgent/: index.rst
gameConfigs/TBS/: CityCapturing.yaml  KillTheKing.yaml  NoNameGame.yaml  ellaCityCapturing.yaml  mymapCityCapturing.yaml  mymapKillTheKing.yaml  mymapNoNameGame.yaml  runCityCapturing.yaml  runKillTheKing.yaml  testKillTheKing.yaml  testSettlers.yaml
(+30 files in other folders)
